# CQT-reporting

./: .gitignore  Issues.md  README-Beginner.md  README-new.md  README.md  pyproject.toml  report.sh  report.tex  test-file.md
scripts/: periodic.sh  report.sh  sync-nqch.sh
src/: fillers.py  plots.py  prepare_context.py
src/templates/: report_template.j2
