[project]
name = "cqt-benchmarking-report-generator"
version = "0.1.0"
description = "A project to generate PDF reports from benchmarking experiments on quantum computers."
authors = [
    {name = "CQT", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.0.0",
    "numpy>=1.20.0",
    "jinja2>=3.0.0",
    "numpy",
    "matplotlib",
    "networkx",
    "aiohttp",
    "scikit-learn",
    "jwt",
    "pyjwt",
    "requests",
    "dynaconf",
    "tabulate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
